--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,7 +1,34 @@
 <h3>Stocks!</h3>
 
+<table>
+  <thead>
+    <tr>
+      <th>Ticker</th>
+      <th>Name</th>
+      <th>Exchange</th>
+      <th>Country</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @stocks.each do |stock| %>
+      <tr>
+        <td><%= link_to stock.ticker, stock_path(stock) %></td>
+        <td><%= stock.name %></td>
+        <td><%= stock.exchange %></td>
+        <td><%= stock.country %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+
+
 Upload Stocks
 <%= form_with url: upload_stocks_path, multipart: true do |form| %>
   <%= file_field_tag :data_file %>
   <%= form.submit 'Save' %>
 <% end %>
+
+
+Stock Uploads Count:
+<%= @stock_data_uploads.count %>
