--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,8 +1,6 @@
-<ul>
-  <li>
-    <%= link_to 'Dashboard', dashboard_path %>
-  </li>
-  <li>
-    <%= link_to 'Stocks', stocks_path %>
-  </li>
-</ul>
+<form>
+  <div class="grid">
+    <input type="text" id="search" name="search" placeholder="Enter Ticker Symbol">
+  </div>
+  <a href="#" role="button" class="outline">Search</a>
+</form>
