clean up views, search, add elasticsearch

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,21 +14,17 @@
   <body>
     <nav class="container">
       <ul>
-        <li><%= link_to 'Dashboard', root_path %></li>
-        <li><%= link_to 'Stocks', stocks_path %></li>
-        <li><%= link_to 'Search', stocks_path %></li>
+        <li><strong>Stonks</strong></li>
       </ul>
       <ul>
-        <li><a href="">Settings</a></li>
-        <li><a href="">About</a></li>
+        <li><%= link_to 'Stocks', stocks_path, class: 'secondary' %></li>
+        <li><%= link_to 'Settings', edit_settings_path, class: 'secondary' %></li>
         <li><a href="" class="contrast"><%= image_tag 'github-svgrepo-com'%></a></li>
       </ul>
     </nav>
+    <hr>
     <main class="container">
       <%= yield %>
     </main>
-    <footer class="container">
-      <hr>
-    </footer>
   </body>
 </html>
