--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -1,2 +1,6 @@
 // Entry point for your Sass build
-@import '@picocss/pico/scss/pico'
+@import '@picocss/pico/scss/pico';
+
+:root {
+  --block-spacing-vertical: calc(var(--spacing));
+}
