--- a/app/views/stocks/show.html.erb
+++ b/app/views/stocks/show.html.erb
@@ -1,10 +1,22 @@
 <hgroup>
-  <h3><%= @stock.symbol %></h3>
+  <h1><%= @stock.symbol %></h1>
   <p><%= @stock.description %></h3>
 </hgroup>
 
 <article>
-  <header>Quote</header>
+  <header>
+    <hgroup>
+      <h1>Recent News</h1>
+      <p><%= @company_news.first.headline %></p>
+    </hgroup>
+  </header>
+  <blockquote>
+    <%= @company_news.first.summary %>
+  </blockquote>
+</article>
+
+<article>
+  <header><h1>Quote</h1></header>
   <table>
     <thead>
       <tr>
@@ -31,30 +43,14 @@
   </table>
 </article>
 
-<% if @recommendation_trend.present? %>
-  <article>
-    <header>Recomendation Trends</header>
-    <table>
-      <thead>
-        <tr>
-          <th><a href="" class="primary">Buy</a></th>
-          <th><a href="" class="primary">Hold</a></th>
-          <th><a href="" class="primary">Period</a></th>
-          <th><a href="" class="primary">Sell</a></th>
-          <th><a href="" class="primary">Strong Buy</a></th>
-          <th><a href="" class="primary">Stong Sell</a></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td><%= @recommendation_trend.buy %></td>
-          <td><%= @recommendation_trend.hold %></td>
-          <td><%= @recommendation_trend.period %></td>
-          <td><%= @recommendation_trend.sell %></td>
-          <td><%= @recommendation_trend.strong_buy %></td>
-          <td><%= @recommendation_trend.strong_sell %></td>
-        </tr>
-      </tbody>
-    </table>
+<% if @recommendation_trends.any? %>
+  <article id="recommendation-trends" data-stock-id="<%= @stock.id %>">
+    <header>
+      <h1>Recommendation Trends</h1>
+    </header>
+    <div id="recommendation-trends-chart"></div>
+    <a id="recommendation-trends-chart-busy-spinner" href="#" aria-busy="true">
+      Generating chart, please wait…
+    </a>
   </article>
 <% end %>
